--- a/myapp/package.json
+++ b/myapp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-"start": "node ./bin/www",
+    "start": "node ./bin/www",
     "test": "mocha  test/test.js -w"
   },
   "dependencies": {
@@ -16,7 +16,9 @@
     "babel-runtime": "~5.8.0",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "chai-http": "^1.0.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "css-loader": "~0.23.0",
     "debug": "^2.2.0",
     "ejs": "^2.5.6",
@@ -33,12 +35,11 @@
     "multer": "^1.1.0",
     "request": "^2.79.0",
     "serve-favicon": "^2.3.2",
+    "should": "~7.1.0",
     "style-loader": "~0.13.0",
+    "supertest": "~1.1.0",
     "togeojson": "^0.16.0",
     "vue": "^2.1.10",
-    "webpack": "~1.12.2",
-    "chai-http": "^1.0.0",
-    "should": "~7.1.0",
-    "supertest": "~1.1.0"
+    "webpack": "~1.12.2"
   }
 }
